<resources>
    <string name="app_name">ProjectCapstone_SpotifyAlarmClock</string>
    <string name="db_name">AlarmDB</string>
    <string name="AlarmTitle">Alarms</string>

    <string name="Date">%.1, %.2, %.3</string>
    <string name="Monday">M</string>
    <string name="Tuesday">T</string>
    <string name="Wednesday">W</string>
    <string name="Thursday">T</string>
    <string name="Friday">F</string>
    <string name="Saturday">S</string>
    <string name="Sunday">S</string>

    <string name="hintTime">00:00</string>
    <string name="addAlarm">Add Alarm</string>
    <string name="timepPreview">12:09</string>
    <string name="AM">AM</string>
    <string name="PM">PM</string>

</resources>