<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".view.SetAlarmActivity">

    <TimePicker
        android:id="@+id/timepicker"
         android:layout_marginTop="30dp"
        android:timePickerMode="clock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:numbersSelectorColor="@color/black"
        android:numbersTextColor="@color/black"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:paddingLeft="18dp"
        android:paddingRight="8dp"
        android:paddingBottom="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timepicker">

        <TextView
            android:id="@+id/tvSunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_marginEnd="20dp"
            android:text="@string/Sunday"
            android:textColor="@color/white"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/tvMonday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_marginEnd="20dp"
            android:text="@string/Monday"
            android:textColor="@color/white"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/tvTuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_marginEnd="20dp"
            android:text="@string/Tuesday"
            android:textColor="@color/white"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/tvWednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_marginEnd="20dp"
            android:text="@string/Wednesday"
            android:textColor="@color/white"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/tvThursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_marginEnd="20dp"
            android:text="@string/Thursday"
            android:textColor="@color/white"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/tvFriday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_marginEnd="20dp"
            android:text="@string/Friday"
            android:textColor="@color/white"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/tvSaturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_marginEnd="20dp"
            android:text="@string/Saturday"
            android:textColor="@color/white"
            android:textSize="30dp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnAddAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addAlarm"
        android:onClick="saveAlarm"
        android:background="@drawable/background_items"
        android:layout_marginBottom="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>

