<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="7dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="7dp"
    android:background="@drawable/background_items"
    app:cardCornerRadius="20dp"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="18dp"
            android:paddingTop="5dp"
            android:paddingRight="8dp"
            android:paddingBottom="5dp">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/item_Time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_horizontal"
                    android:text="12:09"
                    android:textColor="@color/black"
                    android:textSize="@dimen/Alarm_Time" />

                <TextView
                    android:id="@+id/item_txt_am_pm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:layout_marginLeft="5dp"
                    android:text="AM"
                    android:textColor="@color/black"
                    android:textSize="@dimen/Alarm_ampm" />

            </LinearLayout>

            <Switch
                android:id="@+id/item_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="18dp"
            android:paddingRight="8dp"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/tvSunday"
                android:layout_marginEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|start"
                android:text="@string/Sunday"
                android:textSize="24dp" />

            <TextView
                android:id="@+id/tvMonday"
                android:layout_marginEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|start"
                android:text="@string/Monday"
                android:textSize="24dp" />
            <TextView
                android:id="@+id/tvTuesday"
                android:layout_marginEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|start"
                android:text="@string/Tuesday"
                android:textSize="24dp" />
            <TextView
                android:id="@+id/tvWednesday"
                android:layout_marginEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|start"
                android:text="@string/Wednesday"
                android:textSize="24dp" />
            <TextView
                android:id="@+id/tvThursday"
                android:layout_marginEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|start"
                android:text="@string/Thursday"
                android:textSize="24dp" />
            <TextView
                android:id="@+id/tvFriday"
                android:layout_marginEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|start"
                android:text="@string/Friday"
                android:textSize="24dp" />
            <TextView
                android:id="@+id/tvSaturday"
                android:layout_marginEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|start"
                android:text="@string/Saturday"
                android:textSize="24dp" />

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>